config/samples/redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: https://test.av0.de
    kubernetes.io/ingress.class: nginx
  name: redirect-ingress
spec:
  rules:
    - host: redirect.av0.de
      http:
        paths:
          - backend:
              service:
                name: test
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
